from private to public

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div>
               <label>
-                <h3>Is your company already in Yelp?</h3></><br>
+                <h3>Is your company already in Yelp?</h3>
                 <div class="fieldgroup">
                   <input type="radio" name="yelper" value="yelper" checked>Already in Yelp
                   <input type="radio" name="non-yelper" value="nonYelper">Not yet in Yelp<br>
@@ -62,7 +62,7 @@
 
               <div>
                 <label>
-                  <h3>I am..</h3><br>
+                  <h3>I am..</h3>
                   <div class="fieldgroup">
                     <input type="checkbox" name="entrepreneur" value="Entrepreneur" checked>an entrepreneur<br>
                     <input type="checkbox" name="customer" value="Customer">a customer<br>
